WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38905
Include missing header - PageGroup.h
https://bugs.webkit.org/show_bug.cgi?id=38905
Summary
Include missing header - PageGroup.h
Lucas De Marchi
Reported
2010-05-11 06:59:00 PDT
PageGroup.h is needed in function ewk_init and was missing in ewk_main.cpp.
Attachments
Include missing header
(914 bytes, patch)
2010-05-11 07:00 PDT
,
Lucas De Marchi
lucas.de.marchi
: review-
lucas.de.marchi
: commit-queue-
Details
Formatted Diff
Diff
Include missing header
(914 bytes, patch)
2010-05-11 09:11 PDT
,
Lucas De Marchi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Lucas De Marchi
Comment 1
2010-05-11 07:00:45 PDT
Created
attachment 55700
[details]
Include missing header This patch fixes this bug.
Jeremy Orlow
Comment 2
2010-05-11 07:09:03 PDT
Comment on
attachment 55700
[details]
Include missing header r=me
Lucas De Marchi
Comment 3
2010-05-11 09:05:10 PDT
Comment on
attachment 55700
[details]
Include missing header patch is malformed
Lucas De Marchi
Comment 4
2010-05-11 09:11:34 PDT
Created
attachment 55709
[details]
Include missing header Prior patch was malformed. This one fix the problem.
WebKit Commit Bot
Comment 5
2010-05-12 05:36:09 PDT
Comment on
attachment 55709
[details]
Include missing header Rejecting patch 55709 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--quiet']" exit_code: 1 Last 500 characters of output: that name could be found Testing 18333 test cases. media/video-loop.html -> timed out Sampling process 64560 for 10 seconds with 10 milliseconds of run time between samples Sampling completed, processing symbols... Sample analysis of process 64560 written to file /Users/eseidel/Library/Logs/DumpRenderTree/HangReport.txt Exiting early after 1 failures. 14929 tests run. 349.25s total testing time 14928 test cases (99%) succeeded 1 test case (<1%) timed out 11 test cases (<1%) had stderr output Full output:
http://webkit-commit-queue.appspot.com/results/2172155
Gustavo Sverzut Barbieri
Comment 6
2010-05-12 05:43:43 PDT
Could someone (Eric?) check that, given the patch it is clearly not related to this patch. The patch just touches WebKit/efl/ewk/ewk_main.cpp!
Eric Seidel (no email)
Comment 7
2010-05-12 08:47:00 PDT
Comment on
attachment 55709
[details]
Include missing header This was
bug 38912
.
WebKit Commit Bot
Comment 8
2010-05-14 01:44:52 PDT
Comment on
attachment 55709
[details]
Include missing header Clearing flags on attachment: 55709 Committed
r59453
: <
http://trac.webkit.org/changeset/59453
>
WebKit Commit Bot
Comment 9
2010-05-14 01:44:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug