third_party/WebKit/WebKit/efl/ewk/ewk_main.cpp
@@ -25,6 +25,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "EWebKit.h"
 #include "Logging.h"
 #include "PageCache.h"
+#include "PageGroup.h"
 #include "ewk_private.h"
 #include "runtime/InitializeThreading.h"
 #include "wtf/Threading.h"
